[package]
name = "ac-rpc-api"
version = "0.1.0"
authors = ["mmacedoeu <contato@mmacedo.eu.org>"]
edition = "2018"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
description = "RPC interfaces."
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0" }
derive_more = "0.99.2"
futures = { version = "0.3.1", features = ["compat"] }
jsonrpc-core = "15.1.0"
jsonrpc-core-client = "15.1.0"
jsonrpc-derive = "15.1.0"
jsonrpc-pubsub = "15.1.0"
log = "0.4.8"
parking_lot = "0.11.1"
ap-core = { version = "0.1.0", path = "../../primitives/core" }
# sp-version = { version = "3.0.0"}
ap-runtime = { version = "0.1.0", path = "../../primitives/runtime" }
# sp-chain-spec = { path = "../../primitives/chain-spec" , version = "3.0.0"}
serde = { version = "1.0.101", features = ["derive"] }
serde_json = "1.0.41"
# sp-transaction-pool = { version = "3.0.0", path = "../../primitives/transaction-pool" }
ap-rpc = { version = "0.1.0", path = "../../primitives/rpc" }
