[package]
name = "ac-rpc-server"
version = "0.1.0"
authors = ["mmacedoeu <contato@mmacedo.eu.org>"]
edition = "2018"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
description = "RPC servers."
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
futures = "0.1.6"
jsonrpc-core = "15.1.0"
pubsub = { package = "jsonrpc-pubsub", version = "15.1.0" }
log = "0.4.8"
prometheus-endpoint = { package = "substrate-prometheus-endpoint", version = "0.9.0"}
serde = "1.0.101"
serde_json = "1.0.41"
ap-runtime = { version = "0.1.0", path = "../../primitives/runtime" }

[target.'cfg(not(target_os = "unknown"))'.dependencies]
http = { package = "jsonrpc-http-server", version = "15.1.0" }
ipc = { package = "jsonrpc-ipc-server", version = "15.1.0" }
ws = { package = "jsonrpc-ws-server", version = "15.1.0" }
