[package]
name = "ap-application-crypto"
version = "0.1.0"
authors = ["mmacedoeu <contato@mmacedo.eu.org>"]
edition = "2018"
description = "Provides facilities for generating application specific crypto wrapper types."
license = "Apache-2.0"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]


[dependencies]
ap-core = { version = "0.1.0", default-features = false, path = "../core" }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
serde = { version = "1.0.101", optional = true, features = ["derive"] }
sp-std = { version = "3.0.0", default-features = false }
ap-io = { version = "0.1.0", default-features = false, path = "../io"  }

[features]
default = [ "std" ]
std = [ "full_crypto", "ap-core/std", "codec/std", "serde", "sp-std/std", "ap-io/std" ]

# This feature enables all crypto primitives for `no_std` builds like microcontrollers
# or Intel SGX.
# For the regular wasm runtime builds this should not be used.
full_crypto = [
	"ap-core/full_crypto",
	# Don't add `panic_handler` and `alloc_error_handler` since they are expected to be provided
	# by the user anyway.
	"ap-io/disable_panic_handler",
	"ap-io/disable_oom",
]
