[package]
name = "ap-rpc"
version = "0.1.0"
authors = ["mmacedoeu <contato@mmacedo.eu.org>"]
edition = "2018"
license = "Apache-2.0"
description = "RPC primitives and utilities."
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
serde = { version = "1.0.101", features = ["derive"] }
ap-core = { version = "0.1.0", path = "../core" }

[dev-dependencies]
serde_json = "1.0.41"
