[package]
name = "ap-runtime"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
license = "Apache-2.0"
description = "Runtime Modules shared primitive types."
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]


[dependencies]
serde = { version = "1.0.101", optional = true, features = ["derive"] }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
ap-core = { version = "0.1.0", default-features = false, path = "../core" }
ap-application-crypto = { version = "0.1.0", default-features = false, path = "../application-crypto" }
sp-arithmetic = { version = "3.0.0", default-features = false }
sp-std = { version = "3.0.0", default-features = false }
ap-io = { version = "0.1.0", default-features = false, path = "../io" }
log = { version = "0.4.8", optional = true }
paste = "1.0"
rand = { version = "0.7.2", optional = true }
impl-trait-for-tuples = "0.2.1"
parity-util-mem = { version = "0.9.0", default-features = false, features = ["primitive-types"] }
hash256-std-hasher = { version = "0.15.2", default-features = false }
either = { version = "1.5", default-features = false }

[dev-dependencies]
serde_json = "1.0.41"
rand = "0.7.2"
ap-state-machine = { version = "0.1.0", path = "../state-machine"}

[features]
bench = []
runtime-benchmarks = []
default = ["std"]
std = [
	"ap-application-crypto/std",
	"sp-arithmetic/std",
	"codec/std",
	"log",
	"ap-core/std",
	"rand",
	"sp-std/std",
	"ap-io/std",
	"serde",
	"parity-util-mem/std",
	"hash256-std-hasher/std",
	"either/use_std",
]
